<resources>
    <string name="app_name">problema_1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtxtemail">email\n</string>
    <string name="valpass">password\n</string>
    <string name="valingresar">Ingresar</string>
    <string name="valequipos">equipos\n</string>
    <string name="valfutbolistas">futbolistas</string>
    <string name="valrendimiento">rendimiento</string>
</resources>